--- a/index.html
+++ b/index.html
@@ -13,11 +13,55 @@
 
 <body>
 
-    <h1>Hola</h1>
+    <nav class="navbar navbar-dark container-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Ejemplos P5js</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Ejemplos P5js</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Uno</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Dos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Tres</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-    <main></main>
+    <div class="container-md border">
+        <div class="row align-items-start">
+            <div class="col-md-8 align-self-start">
+                <main>
+                </main>
+            </div>
+            <div class="col-md-4 align-self-start">Col 2</div>
+        </div>
+        <div class="row">
+            <div class="col">
+                @matahj
 
-    <h1>Adios</h1>
+            </div>
+        </div>
+    </div>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="addons/p5.js"></script>
