Navegación home and uno

--- a/sk1/index.html
+++ b/sk1/index.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplos P5js</title>
 
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="addons/main.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../addons/main.css">
 </head>
 
 <body>
 
     <nav class="navbar navbar-dark container-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">Ejemplos P5js</a>
+            <a class="navbar-brand" href="../index.html">Ejemplos P5js</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -30,10 +30,10 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./sk1/index.html">Uno</a>
+                            <a class="nav-link active" href="./index.html">Uno</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Dos</a>
@@ -63,9 +63,9 @@
         </div>
     </div>
 
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="addons/p5.js"></script>
-    <script src="sk0/sketch.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="../addons/p5.js"></script>
+    <script src="sketch.js"></script>
 </body>
 
 </html>
